# wds-astropy-table

./: .gitignore  README.md  pyproject.toml
example/: test.py
test/: test.py
wds_astropy_table/: __init__.py  parse.py  parser.py  sixth_orbital.py  wdsweb.py
