[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wds-astropy-table"
version = "0.2.0"
authors = [
  { name="Adam Brown", email="adamarthurryan@gmail.com" },
]
dependencies = [
    "astropy",
    "numpy",
]
description = "A simple package to parse the WDS catalog into an astropy table"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["wds_astropy_table*"]

